# Butlr

./: .gitignore  CLAUDE.md  LICENSE
.claude/: settings.json
.claude/commands/: new-adr.md  phase-status.md
.claude/rules/: adr-writing.md  code-style.md  confidence-markers.md
carlson/: CLAUDE.md  README.md  pyproject.toml
carlson/assets/wakeword/: README.md  training_config.yaml
carlson/docker/: Dockerfile.wakeword-train  entrypoint.sh  train.py
carlson/scripts/: record_wakeword.py  test_wakeword.py  train_wakeword.py
carlson/src/carlson/: __init__.py  config.py  filler.py  main.py  mcp_client.py  persona.py  pipeline.py
carlson/src/carlson/services/: __init__.py  llm_local.py  ptt_gate.py  stt_whisper.py  tts_piper.py  wake_word.py
carlson/tests/: test_filler.py  test_wake_word.py
docs/: architecture.md  tasks-vdevice-implementation.md  vdevice-architecture.md
docs/adr/: 0001-monorepo-polyglot-layout.md  0002-pipecat-orchestration.md  0003-mcp-sse-http-service.md  0004-filler-sidecar-pattern.md  0005-mcp-home-dotnet-10.md  0006-llm-serving-llamacpp-10gb.md  0007-virtual-device-arbitration.md  0008-vdevice-lifecycle-renew.md  0009-app-device-permissions.md  0010-matter-clusters-capability-model.md  0011-driver-mqtt-adapter.md  0012-state-persistence-audit-fallback.md  0013-user-agents-vs-apps.md  (+3 more)
mcp-home/: .gitignore  CLAUDE.md  McpHome.sln  README.md
scripts/: Build-Llama.ps1  Check-Prereqs.ps1  Get-LlamaModel.ps1  Get-PiperVoices.ps1  Get-WhisperModel.ps1  README.md  Start-LlamaServer.ps1  Test-LlamaServer.ps1  Test-Piper.ps1  Test-Whisper.py  Train-WakeWord.ps1  _Lib.ps1  env.example.ps1  env.ps1
(+9 files in other folders)
